# python-project-83

./: .flake8  .gitignore  .render.yaml  Makefile  Makefile.txt  README.md  database.sql  pyproject.toml
.github/workflows/: linter.yml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: base.html  index.html  main_layout.html  url.html  urls.html
page_analyzer/templates/pages/: 404.html  500.html  home.html  index.html  url_info.html  urls.html
