[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Service for page analysis. It checks the response code and the presence of tags."
authors = ["deusmg <laptevap@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

repository = "https://github.com/deusmg/python-project-83"
classifiers = [
    "License :: Free for non-commercial use",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.26.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
